cmake_minimum_required (VERSION 3.23)
project                (vapor)

set (PRESET_FEATURE_COLLECTIONS ON)
set (PRESET_FEATURE_LIBC        ON)

if   (UNIX AND NOT APPLE)
    if   (NOT EXISTS /usr/bin/git)
        message ("Git is required to initialize project.")
        message ("Install Git from your package manager.")
        message (SEND_ERROR)
    endif()
elseif (WIN32)
    if   (NOT EXISTS "C:\\Program Files\\Git\\bin\\git.exe")
        message ("Git is required to initialize project.")
        message ("Install Git from your package manager.")
        message (SEND_ERROR)
    endif()
endif  ()

if   (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/lib/asterisk)
    execute_process(COMMAND git clone https://github.com/gunnerDgd/asterisk WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
endif()

if   (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/lib/crisp)
    execute_process(COMMAND git clone https://github.com/gunnerDgd/crisp    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
endif()

if    (UNIX AND NOT APPLE)
    execute_process(COMMAND git clone https://github.com/gunnerDgd/klever   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
    set     (KLEVER_TOOLS_BUSYBOX ON)
    include (${CMAKE_SOURCE_DIR}/lib/klever/klever.cmake)
endif ()

include (${CMAKE_SOURCE_DIR}/lib/crisp/cmake/preset.cmake)
preset_arch    ()
preset_bit     ()
preset_compiler()
preset_endian  ()
preset_os      ()

enable_collections()
enable_libc       ()
enable_thread     ()

include_directories(lib/crisp/include)
include_directories(lib/asterisk/include)

add_subdirectory(${CMAKE_SOURCE_DIR}/lib/crisp/src)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/asterisk/src)

add_subdirectory   (lib/asterisk/example)
add_subdirectory   (include)
add_subdirectory   (src)
add_subdirectory   (package)
add_subdirectory   (examples)